--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/AcmeSystem.Presentation.ClientWeb.csproj
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/AcmeSystem.Presentation.ClientWeb.csproj
@@ -1,19 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <TypeScriptToolsVersion>3.0</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AcmeSystem.Applicative.Services\AcmeSystem.Applicative.Services.csproj" />
     <ProjectReference Include="..\AcmeSystem.Business\AcmeSystem.Business.csproj" />
+    <ProjectReference Include="..\AcmeSystem.Persistence.EntityRepositories\AcmeSystem.Persistence.EntityRepositories.csproj" />
     <ProjectReference Include="..\AcmeSystem.Persistence.MockRepositories\AcmeSystem.Persistence.MockRepositories.csproj" />
   </ItemGroup>
 
