--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/AcmeSystem.Presentation.ClientWeb.csproj
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/AcmeSystem.Presentation.ClientWeb.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,12 +19,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\js\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="Views\Shared\_LoginPartial.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
   </ItemGroup>
 
 </Project>
