--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/appsettings.json
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/appsettings.json
@@ -2,6 +2,9 @@
   "Data": {
     "AcmeSystemEntityDb": {
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AcmeSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "AcmeSystemIdentity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AcmeSystemIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-}
+  }
 }
