--- a/AcmeSytem/Code/AcmeSystem.Persistence.EntityRepositories/AcmeSystem.Persistence.EntityRepositories.csproj
+++ b/AcmeSytem/Code/AcmeSystem.Persistence.EntityRepositories/AcmeSystem.Persistence.EntityRepositories.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.3" />
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
   </ItemGroup>
   
